--- a/src/app/pages/college-detail/college-detail.scss
+++ b/src/app/pages/college-detail/college-detail.scss
@@ -18,7 +18,7 @@
             font-weight: 800;
             margin-bottom: 1rem;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-            color:white
+            color: white
         }
 
         .location {
@@ -273,5 +273,31 @@
 
     .college-hero .college-title {
         font-size: 2.2rem;
+    }
+}
+
+.loading-container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .spinner {
+        width: 40px;
+        height: 40px;
+        border: 4px solid #f3f3f3;
+        border-top: 4px solid var(--blue-600);
+        border-radius: 50%;
+        animation: spin 1s linear infinite;
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
     }
 }
