--- a/src/app/components/admin-layout/admin-layout.component.html
+++ b/src/app/components/admin-layout/admin-layout.component.html
@@ -16,7 +16,7 @@
     </nav>
 
     <div class="sidebar-footer">
-      <button class="logout-btn">
+      <button class="logout-btn" (click)="logout()">
         <span class="nav-label" *ngIf="!isSidebarCollapsed">Logout</span>
       </button>
     </div>
