--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -1,7 +1,7 @@
 <div class="page-container">
     <div class="page-header">
         <div class="container">
-            <h1>Latest Articles</h1>
+            <h1 class="text-white">Latest Articles</h1>
             <p>Insights, updates, and guidance for your medical career.</p>
         </div>
     </div>
