--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* Global Styles & Theming */
 :root {
     /* Brand Colors - Blue Palette Shading */
